changed return type of lessons list in API
